--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,18 @@
 </head>
 
 <body>
-  <h1>Have fun! 🥔</h1>
+  <main class="container">
+    <h2>Header</h2>
+    <section class="items">
+      <span class="item">
+        <img class="food" src="">
+        <p>Food item<br />Description</p>
+      </span>
+    </section>
+  </main>
+  <footer>
+    <button>Cart</button>
+  </footer>
 </body>
 
 </html>
