--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,3 +4,41 @@ body,
 html {
   margin: 0;
 }
+nav {
+  width: 100%;
+  height: 75px;
+  position: fixed;
+  align-items: center;
+  top: 0;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+  padding: 0.5em;
+}
+
+div#title {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-size: 24pt;
+}
+div#navbar {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  font-size: 18pt;
+}
+
+footer {
+  display: flex;
+  width: 100%;
+  height: 75px;
+  position: fixed;
+  bottom: 0px;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  font-size: 18pt;
+}
