add link to homepage

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center py-3 border-bottom">
-  <span class="store-name">Todai Restaurant</span>
+  <a href="/" class="store-name link-dark">Todai Restaurant</a>
 </div>
 <header class="d-flex justify-content-center py-3 mb-4 border-bottom">
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
