--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,7 +4,7 @@ body,
 html {
   margin: 0;
 }
-nav {
+/*nav {
   width: 100%;
   height: 75px;
   position: fixed;
@@ -17,6 +17,24 @@ nav {
   color: white;
   padding: 0.5em;
 }
+*/
+
+nav {
+  height: 100px;
+  background-color: #0d6efd;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  padding-bottom: 2 em;
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+  flex-flow: column wrap;
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  color: white;
+ }
 
 div#title {
   display: flex;
