--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -2,43 +2,59 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Home Page</title>
+
+  <link rel="stylesheet" href="../vendor/normalize-4.1.1.css" type="text/css" />
+  <link rel="stylesheet" href="../vendor/border-box.css" type="text/css" />
+  <link rel="stylesheet" href="../styles/main.css" type="text/css" />
+  <link rel="stylesheet" href="../styles/layout.css" type="text/css" />
+
+  <script type="text/javascript" src="vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="scripts/app.js"></script>
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>TinyApp</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <% for(let item of foodItems) { console.log(item.picture_url); %>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="<%= item.picture_url %>" alt="Lights" style="width:100%">
-            <div class="caption">
-              <p>
+  <header>
+    <nav>
+      <div id="title">Todai Restaurant</div>
+      <div id="navbar">
+        <span>Menu</span>
+      </div>
+    </nav>
+  </header>
+  <!-- Main content here -->
+  <div class="container" style="padding-top: 50px;">
+    <% for(let item of foodItems) { %>
+      <div class="card mb-3" style="max-width: 800px;">
+        <div class=" row g-0">
+          <div class="col-md-4">
+            <img src="<%= item.picture_url %>" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">
                 <%= item.name%>
+              </h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text">
+                <large class="text-muted">Price : $<%= item.price / 100%>
+                </large>
               </p>
+              <a href="#" class="btn btn-secondary">Add to Cart</a>
             </div>
           </div>
         </div>
-        <% } %>
-    </div>
+      </div>
+      <% } %>
   </div>
-
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+  <footer>
+    <a href="#" class="btn btn-primary">Show Cart</a>
+  </footer>
 </body>
 
 </html>
