--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -29,7 +29,7 @@
   <!-- Main content here -->
   <div class="container" style="padding-top: 50px;">
     <% for(let item of foodItems) { %>
-      <div class="card mb-3" style="max-width: 800px;">
+      <div class="card mb-3" style="max-width: 500px;">
         <div class=" row g-0">
           <div class="col-md-4">
             <img src="<%= item.picture_url %>" class="img-fluid rounded-start" alt="...">
@@ -39,8 +39,9 @@
               <h5 class="card-title">
                 <%= item.name%>
               </h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+              <p class="card-text">
+                <%= item.description%>
+              </p>
               <p class="card-text">
                 <large class="text-muted">Price : $<%= item.price / 100%>
                 </large>
