--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,6 +31,7 @@ section {
 div.items {
   display: flex;
   flex-direction: row;
+  width: 100%;
   justify-content: space-between;
   margin: 0 0.5em 0.5em 0.5em;
 }
