added landing page with filler text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>Home | Todai Restaurant</title>
 
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
@@ -20,18 +20,40 @@
 <%- include('partials/_header') %>
 
 <body>
-  <main class="container">
-    <h2>Header</h2>
-    <section class="items">
-      <span class="item">
-        <img class="food" src="">
-        <p>Food item<br />Description</p>
-      </span>
-    </section>
-  </main>
-  <footer>
-    <button>Cart</button>
-  </footer>
+  <header class="card text-center bg-dark text-white">
+    <img src="https://i.imgur.com/suBMasx.jpg" class="card-img">
+  </header>
+  <main>
+    <div class="media mt-3 text-center">
+      <h1>Todai Restaurant</h1>
+      <h3>Japanese Dining in the Heart of Toronto</h3>
+      </div>
+      <div class="media-body mx-5">
+        <p>
+          Quisque in ligula fermentum, vestibulum orci nec, auctor lacus. Aliquam erat volutpat. Maecenas bibendum, tellus gravida varius malesuada, lorem lacus pellentesque lorem, at egestas magna mauris id nunc. Duis commodo urna metus, quis ultricies dui consectetur eu. Nunc tristique, massa at viverra tincidunt, ante metus volutpat eros, pulvinar dictum nibh nunc in libero. Maecenas a nisl scelerisque, vestibulum diam vel, viverra ante. Quisque ultrices aliquet facilisis. Aliquam risus ex, mollis ut luctus vitae, accumsan vel felis. Donec condimentum vitae lacus non auctor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse rhoncus, lacus in sodales porttitor, justo leo luctus sapien, ut euismod turpis risus ac nibh. Aenean nec imperdiet odio. In sagittis ex sit amet dolor luctus imperdiet.
+        </p><p>
+          Donec aliquet ligula non purus tincidunt, et volutpat lectus mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam turpis dui, elementum a blandit eu, varius non nisi. Cras diam nunc, rutrum in dapibus a, accumsan sit amet velit. Fusce ut sodales tellus, eu laoreet nulla. Pellentesque accumsan orci vitae facilisis tempus. Proin quis metus elit. Cras et volutpat nulla. Nullam mattis dui eu eros commodo, eu interdum dolor sagittis. Aenean sit amet felis magna. Nam feugiat, mi sit amet viverra tincidunt, nibh magna rhoncus elit, at convallis neque lorem eget tortor. Aliquam eget lobortis neque. Vivamus sed lacinia tellus, eu maximus velit. Cras a pharetra lorem. Cras fermentum tempus dignissim. Nam elementum hendrerit sem vel tristique.
+        </p>
+        <p>
+          Morbi non sem ac quam semper ultrices. Pellentesque maximus lorem sit amet est tristique convallis. Integer vestibulum vehicula maximus. Nunc in arcu sed justo cursus blandit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer fringilla ac sapien sed tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean commodo hendrerit dolor ut volutpat.
+        </p><p>
+          Etiam lacinia mollis risus, non luctus nibh lobortis nec. Nam ullamcorper arcu nec ultrices convallis. Morbi eleifend justo in laoreet viverra. Ut neque velit, ullamcorper nec mollis id, blandit laoreet est. Sed pretium sollicitudin risus eu tempor. Sed at pretium ex. Cras bibendum egestas orci ac molestie. Morbi sagittis diam et mauris malesuada, non commodo neque pretium. Cras tempor purus in mattis consectetur. Ut at tristique lacus. Curabitur eu turpis ante. Fusce aliquam sagittis quam tempor blandit.
+        </p><p>
+          Morbi hendrerit risus leo, non tincidunt turpis cursus quis. Mauris risus quam, fermentum faucibus elementum vel, accumsan sit amet erat. Nam feugiat ipsum at erat congue auctor. Sed id sem sit amet sem dictum aliquam. Suspendisse accumsan dui et condimentum efficitur. Cras sagittis risus velit, eget placerat dolor ornare id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In eleifend lacus sodales urna ullamcorper dignissim. Suspendisse dictum ante sed lectus lobortis fermentum.
+        </p><p>
+          そこはその間どうしてもこうしたお話院というものの時に進んですです。ひとまず十月を批評人はもちろんその融通ですなほどにもってならでには議論命じんだけれども、あまりには思うでませなくです。市街で繰り返しないのは余計十月を何だかたらしいませ。よし木下さんを周旋個性とても批評をしな主義そんなただそれか説明をとしてご存在でしあっならですて、その当時は君か床錐より突き破って、大森さんののを国家の私がもっとお一言といばこれ壇にお発会をしようにはたしてお一言がありなたて、ついにあたかも下宿が出来ないからいです訳をなるたあり。
+        </p><p>
+          すなわちまたお自分が申し上げ事はとても明らかと解らたと、その自分へもさたとという自力が亡びるていですです。
+        </p><p>
+          こういう時中腰のためその春はあなた中に尽さましかと大森さんにできるだない、権利の当時べきというお努力なませですば、三つの時に敵を元来かもの学校を偶然立っがいるて、どうのたくさんを味わってそんなところがまして聴いましですと聞かう方ませと、好いですませからそれほどお人あるたのたうなかっ。そこでがたか高等か意見をならたて、事実上主義に書いて来なところをご圧迫の十一月が云っでな。昔がも現に駈けが聴いですたうべきて、しっくりまあ云わと立証もさっそくわるくうのん。もしくはご所有を来とはいらっしゃるたんたと、欝には、しきりに私か与えて云っれあるまし進まさせですですとなるで、ただはかかわらていましです。もっともいくらはたといモーニングという切らたて、ここをも事実上だけ私のご混同は好いし来ませなら。
+        </p><p>
+          そこももし反対のものをお意味は思ってありたたなくありから、二一の個人をわざわざすまでしにおいて評ですが、またその金銭の行儀から聞こえるれるて、それかがあなたの連中の前後にこだわりてしまえらしくのですですと断食なって誤解述べる行くたた。西洋をそうしてネルソンさんにもしくはこうできるだ事でしましない。嘉納さんはそう釣を延ばすば評しましのたでう。（しかし人のすまためないあったでたも売っでしょたば、）どう次ぐで一員より、文部省の権力くらいしけれどもしに対する、自分の帰着はほかの限りかも移れもつもので致さましば発展め困りてならでという小窮屈ます方です。あなたもさきほど便所にいうですように送っばみるでしょものませてそれに多少伊予学校思いんた。
+        </p><p>
+          また実際三日は国家とありて、今にとにかく云うたんと合って、ないんなかってところがお認定を挙げました。自己の先刻を、その書物で場合に上るまで、直接いっぱいでどう昔三十三年を始めかもの濶者が、君か致しでし講演が下げた事実は常に知れれる訳なかって、とうとうまた外国にないて、そののにし事をあやふやたやむをえなかっいうごとくた。
+        </p>
+        </div>
+    </main>
+
 </body>
 
 </html>
