--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,6 +5,6 @@
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <li><a href="/api/menu" class="nav-link px-2 link-dark">Menu</a></li>
     <li><a href="/location" class="nav-link px-2 link-dark">Location</a></li>
-    <li><a href="/contact" class="nav-link px-2 link-dark">Contact</a></li>
+    <li><a href="/api/contact" class="nav-link px-2 link-dark">Contact</a></li>
   </ul>
 </header>
