--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -16,17 +16,33 @@
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <%- include('partials/_header') %>
 
 <body>
-  <h2>Current Order</h2>
+  <h2 class="text-center">Current Order</h2>
   <main class="container" id="cart">
-
+    <%  %>
+    <% let total = 0; %>
+    <% for (let item of cart) { %>
+      <section class="card">
+        <div class="items">
+          <span>
+            <span class="quantity"><i class="fas fa-plus"></i> <%= item.quantity %> <i class="fas fa-minus"></i></span>
+            <span class="text-left"><%= item.name %></span>
+          </span>
+          <span class="price text-right">$<%= (item.price/100).toFixed(2) %></span>
+        </div>
+      </section>
+    <% } %>
       <footer>
-        <button class="btn">Checkout</button>
+        <form>
+          <button class="btn btn-dark">Checkout</button>
+        </form>
       </footer>
     </main>
 </body>
