updating styling/formatting of cart page, changed checkout button

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -26,11 +26,11 @@
 <body>
   <h2 class="text-center">Current Order</h2>
   <main class="container" id="cart">
-    <%  %>
     <% let total = 0; %>
     <% for (let item of cart) { %>
+    <% total += item.price * item.quantity; %>
       <section class="card">
-        <div class="items">
+        <div class="items card-body">
           <span>
             <span class="quantity"><i class="fas fa-plus"></i> <%= item.quantity %> <i class="fas fa-minus"></i></span>
             <span class="text-left"><%= item.name %></span>
@@ -39,8 +39,13 @@
         </div>
       </section>
     <% } %>
+    <section class="totals card">
+      <div class="total card-body"><span>Subtotal:</span><span>$<%= (total/100).toFixed(2) %></span></div>
+      <div class="total card-body"><span>Tax:</span><span>$<%= (total/100*0.13).toFixed(2) %></span></div>
+      <div class="total card-footer"><span>Total:</span><span>$<%= (total/100*1.13).toFixed(2) %></span></div>
+    </section>
       <footer>
-        <form>
+        <form id="checkout" action="/checkout" method="POST">
           <button class="btn btn-dark">Checkout</button>
         </form>
       </footer>
