--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="../styles/main.css" type="text/css" />
   <link rel="stylesheet" href="../styles/layout.css" type="text/css" />
 
-  <script type="text/javascript" src="vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="scripts/app.js"></script>
+  <script type="text/javascript" src="../vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="../scripts/app.js"></script>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,37 +19,44 @@
 
 <body>
   <%- include('partials/_header') %>
-  <!-- Main content here -->
-  <div class="container">
-    <h2>Menu</h2><br>
-    <% for(let item of foodItems) { %>
-      <div class="card mb-3" style="max-width: 500px;">
-        <div class=" row g-0">
-          <div class="col-md-4">
-            <img src="<%= item.picture_url %>" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">
-                <%= item.name%>
-              </h5>
-              <p class="card-text">
-                <%= item.description%>
-              </p>
-              <p class="card-text">
-                <large class="text-muted">Price : $<%= item.price / 100%>
-                </large>
-              </p>
-              <a href="#" class="btn btn-secondary">Add to Cart</a>
+    <!-- Main content here -->
+    <div class="container">
+      <div class="menu-cart">
+        <div>
+          <h2>Menu</h2>
+        </div>
+        <div><button type="button" class="btn btn-primary">Cart <span id="cartcount"
+              class="badge badge-light">0</span></button>
+        </div>
+      </div>
+      <% for(let item of foodItems) { %>
+        <div class="card mb-3" style="max-width: 500px;">
+          <div class=" row g-0">
+            <div class="col-md-4">
+              <img src="<%= item.picture_url %>" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">
+                  <%= item.name%>
+                </h5>
+                <p class="card-text">
+                  <%= item.description%>
+                </p>
+                <p class="card-text">
+                  <large class="text-muted">Price : $<%= item.price / 100%>
+                  </large>
+                </p>
+                <a class="btn btn-secondary add-to-cart">Add to Cart</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <% } %>
-  </div>
-  <footer>
-    <a href="#" class="btn btn-primary">Show Cart</a>
-  </footer>
+        <% } %>
+    </div>
+    <footer>
+      <a href="#" class="btn btn-primary">Show Cart</a>
+    </footer>
 </body>
 
 </html>
