--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -25,8 +25,13 @@
         <div>
           <h2>Menu</h2>
         </div>
-        <div><button type="button" class="btn btn-primary">Cart <span id="cartcount"
-              class="badge badge-light">0</span></button>
+        <div>
+          <button type="button" class="btn btn-primary position-relative">
+            Cart
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id=cartcount>
+              0
+            </span>
+          </button>
         </div>
       </div>
       <% for(let item of foodItems) { %>
