--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -12,6 +12,12 @@
   <script type="text/javascript" src="../vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="../scripts/app.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"
+    integrity="sha512-aUhL2xOCrpLEuGD5f6tgHbLYEXRpYZ8G5yD+WlFrXrPy2IrWBlu6bih5C9H6qGsgqnU6mgx6KtU8TreHpASprw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"
+    integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -26,25 +32,25 @@
           <h2>Menu</h2>
         </div>
       </div>
-      <% for(let item of foodItems) { %>
+      <% for(let idx=0; idx < foodItems.length; idx++) { %>
         <div class="card mb-3" style="max-width: 500px;">
           <div class=" row g-0">
             <div class="col-md-4">
-              <img src="<%= item.picture_url %>" class="img-fluid rounded-start" alt="...">
+              <img src="<%= foodItems[idx].picture_url %>" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">
-                  <%= item.name%>
+                <h5 class="card-title" id="item-title-<%= idx %>">
+                  <%= foodItems[idx].name%>
                 </h5>
-                <p class="card-text">
-                  <%= item.description%>
+                <p class="card-text" id="item-desc-<%= idx %>">
+                  <%= foodItems[idx].description%>
                 </p>
                 <p class="card-text">
-                  <large class="text-muted">Price : $<%= item.price / 100%>
+                  <large class="text-muted" id="item-price-<%= idx %>">Price : $<%= foodItems[idx].price / 100%>
                   </large>
                 </p>
-                <a class="btn btn-secondary add-to-cart">Add to Cart</a>
+                <button type="button" value="<%= idx %>" class="btn btn-secondary add-to-cart">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -52,12 +58,14 @@
         <% } %>
     </div>
     <footer>
-      <button type="button" class="btn btn-primary position-relative">
+
+      <button type="button" class="btn btn-primary position-relative" id="showcart">
         Show Cart
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id=cartcount>
           0
         </span>
       </button>
+      <button type="button" class="btn btn-primary position-relative" id="clearcart"> Clear Cart</button>
     </footer>
 </body>
 
