--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -12,7 +12,8 @@
 
   <script type="text/javascript" src="../vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="../scripts/app.js"></script>
-  <script type="text/javascript" src="../scripts/updatecart.js"></script>
+  <script type="text/javascript" src="../scripts/cart.js"></script>
+  <!-- <script type="text/javascript" src="../scripts/updatecart.js"></script> -->
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
