checkout cart save to DB

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -15,6 +15,14 @@
   <script type="text/javascript" src="../scripts/cart.js"></script>
   <!-- <script type="text/javascript" src="../scripts/updatecart.js"></script> -->
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"
+    integrity="sha512-aUhL2xOCrpLEuGD5f6tgHbLYEXRpYZ8G5yD+WlFrXrPy2IrWBlu6bih5C9H6qGsgqnU6mgx6KtU8TreHpASprw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"
+    integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -28,47 +36,52 @@
     crossorigin="anonymous"></script>
 </head>
 <%- include('partials/_header') %>
+
   <body>
     <h2 class="text-center">Current Order</h2>
     <main class="container" id="cart">
       <% let total=0; %>
-      <% for (let item of cart) { %>
-        <% total +=item.price * item.quantity; %>
-        <section class="card">
-          <div class="items card-body">
-            <span>
-              <span class="quantity"><i class="fas fa-plus"></i>
-                <%= item.quantity %> <i class="fas fa-minus"></i>
-              </span>
-              <span class="text-left">
-                <%= item.name %>
-              </span>
-            </span>
-            <span class="price text-right">
-              $<%= item.price %>
-            </span>
-          </div>
-        </section>
-      <% } %>
-      <section class="totals card">
-        <div class="total card-body">
-          <span>Subtotal:</span>
-          <span><%= total.toLocaleString("en-US", {style:"currency", currency:"USD"}) %></span>
-        </div>
-        <div class="total card-body">
-          <span>Tax:</span>
-          <span><%= (total*0.13).toLocaleString("en-US", {style:"currency", currency:"USD"}) %></span>
-        </div>
-        <div class="total card-footer">
-          <span>Total:</span>
-          <span><%= (total*1.13).toLocaleString("en-US", {style:"currency", currency:"USD"}) %></span>
-        </div>
-      </section>
-      <footer>
-        <form id="checkout" action="/checkout" method="POST">
-          <button class="btn btn-dark">Checkout</button>
-        </form>
-      </footer>
+        <% for (let item of cart) { %>
+          <% total +=item.price * item.quantity; %>
+            <section class="card">
+              <div class="items card-body">
+                <span>
+                  <span class="quantity" id="item-qty"><i class="fas fa-plus"></i>
+                    <%= item.quantity %> <i class="fas fa-minus"></i>
+                  </span>
+                  <span class="text-left" id="item">
+                    <%= item.name %>
+                  </span>
+                </span>
+                <span class="price text-right">
+                  $<%= item.price %>
+                </span>
+              </div>
+            </section>
+            <% } %>
+              <section class="totals card">
+                <div class="total card-body">
+                  <span>Subtotal:</span>
+                  <span id="cart-sub-total">
+                    <%= total.toLocaleString("en-US", {style:"currency", currency:"USD"}) %>
+                  </span>
+                </div>
+                <div class="total card-body">
+                  <span>Tax:</span>
+                  <span id="cart-tax">
+                    <%= (total*0.13).toLocaleString("en-US", {style:"currency", currency:"USD"}) %>
+                  </span>
+                </div>
+                <div class="total card-footer">
+                  <span>Total:</span>
+                  <span>
+                    <%= (total*1.13).toLocaleString("en-US", {style:"currency", currency:"USD"}) %>
+                  </span>
+                </div>
+              </section>
+              <footer>
+                <button id="checkout" class="btn btn-dark">Checkout</button>
+              </footer>
     </main>
   </body>
 
