--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="../styles/main.css" type="text/css" />
   <link rel="stylesheet" href="../styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="../styles/cart.css" type="text/css" />
 
   <script type="text/javascript" src="../vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="../scripts/app.js"></script>
@@ -22,6 +23,14 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"></script>
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -64,7 +73,7 @@
     </div>
     <footer>
 
-      <button type="button" class="btn btn-primary position-relative" id="showcart">
+      <button type="button" class="btn btn-primary position-relative" id="showcart" data-bs-toggle="modal" data-bs-target="#cart" data-title="Current Order">
         Show Cart
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id=cartcount>
           0
@@ -72,6 +81,44 @@
       </button>
       <button type="button" class="btn btn-primary position-relative" id="clearcart"> Clear Cart</button>
     </footer>
+
+    <!-- Cart Modal -->
+    <div id="cart" class="modal fade" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form>
+            <div class="modal-header text-center">
+              <h5 class="modal-title w-100">Current Order</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              <div id="cartbody">
+
+              </div>
+              <section class="totals card" id="totals">
+                <div class="total card-body">
+                  <span>Subtotal:</span>
+                  <span id="subtotal">$0.00</span>
+                </div>
+                <div class="total card-body">
+                  <span>Tax:</span>
+                  <span id="tax">$0.00</span>
+                </div>
+                <div class="total card-footer">
+                  <span>Total:</span>
+                  <span id="total">$0.00</span>
+                </div>
+              </section>
+            </div>
+            <div class="modal-footer text-center">
+              <form id="checkout" action="/checkout" method="POST"></form>
+                <button type="button" class="btn btn-primary w-100">Checkout</button>
+              </form>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
