fix checkout button

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -111,9 +111,7 @@
               </section>
             </div>
             <div class="modal-footer text-center">
-              <form id="checkout" action="/checkout" method="POST"></form>
-                <button type="button" class="btn btn-primary w-100">Checkout</button>
-              </form>
+                <button id="checkout" type="button" class="btn btn-primary w-100">Checkout</button>
             </div>
           </form>
         </div>
