--- a/views/orderconfirm.ejs
+++ b/views/orderconfirm.ejs
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="../styles/main.css" type="text/css" />
   <link rel="stylesheet" href="../styles/layout.css" type="text/css" />
 
-  <script type="text/javascript" src="vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="scripts/app.js"></script>
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/scripts/orderconfirm.js"></script>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,7 +28,12 @@
         </div>
         <div class="card-body">
           <h4 class="card-title">Thank you for your Order</h4>
-          <p class="card-text">Order Id : <%= order_id %>. Your Order will be ready in <%= total_order_time %> mins.
+          <p class="card-text">Order Id :
+            <a id="send-sms-id">
+              <%= order_id %>
+            </a>. Your Order will be ready in <a id="time-to-send-sms">
+              <%= total_order_time %>
+            </a> sec.
           </p>
         </div>
       </div>
