--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,10 +1,12 @@
-<div class="d-flex justify-content-center py-3 border-bottom">
-  <a href="/" class="store-name link-dark">Todai Restaurant</a>
+<div class="d-flex justify-content-center" style="background-color:black;" id="top">
+  <a href="/"><img src="https://i.imgur.com/dMVDgqd.png" height="100px"></a>
 </div>
-<header class="d-flex justify-content-center py-3 mb-4 border-bottom">
-  <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a href="/menu" class="nav-link px-2 link-dark">Menu</a></li>
-    <li><a href="/location" class="nav-link px-2 link-dark">Location</a></li>
-    <li><a href="/contact" class="nav-link px-2 link-dark">Contact</a></li>
-  </ul>
-</header>
+<nav class="navbar navbar-expand-sm navbar-light" style="background-color:black; height:66px;">
+  <div class="text-center" id="navmenu">
+    <ul class="nav col-12 justify-content-center">
+      <li><a href="/menu" class="nav-link px-2 link-light">Menu</a></li>
+      <li class="nav-link px-2 link-light">Location</li>
+      <li><a href="/contact" class="nav-link px-2 link-light">Contact</a></li>
+    </ul>
+  </div>
+</nav>
