--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,20 +4,6 @@ body,
 html {
   margin: 0;
 }
-/*nav {
-  width: 100%;
-  height: 75px;
-  position: fixed;
-  align-items: center;
-  top: 0;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  color: white;
-  padding: 0.5em;
-}
-*/
 
 nav {
   height: 100px;
@@ -52,13 +38,14 @@ div#navbar {
 footer {
   display: flex;
   width: 100%;
-  height: 75px;
   position: fixed;
   bottom: 0px;
   align-items: center;
   justify-content: center;
-  background-color: white;
-  font-size: 18pt;
-  gap: 35px;
+  background-color: black;
+}
+
+#backtotop {
+  background-color: black;
 }
 
