--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -19,6 +19,7 @@
 
 <body>
   <%- include('partials/_header') %>
+  <main>
     <!-- Main content here -->
     <div class="container">
       <div class="card" style="width: 30rem;">
@@ -50,6 +51,7 @@
         </div>
       </div>
     </div>
+  </main>
 </body>
 
 </html>
