--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/responsive.css" type="text/css" />
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
@@ -20,15 +21,15 @@
 <%- include('partials/_header') %>
 
 <body>
-  <header class="card text-center bg-dark text-white">
-    <img src="https://i.imgur.com/suBMasx.jpg" class="card-img">
-  </header>
   <main>
     <div class="media mt-3 text-center">
       <h1>Todai Restaurant</h1>
       <h3>Japanese Dining in the Heart of Toronto</h3>
       </div>
-      <div class="media-body mx-5">
+    <header class="card text-center bg-dark text-white">
+      <img src="https://i.imgur.com/suBMasx.jpg" class="card-img">
+    </header>
+      <div class="media-body mx-5" style="padding-top: 1em;">
         <p>
           Quisque in ligula fermentum, vestibulum orci nec, auctor lacus. Aliquam erat volutpat. Maecenas bibendum, tellus gravida varius malesuada, lorem lacus pellentesque lorem, at egestas magna mauris id nunc. Duis commodo urna metus, quis ultricies dui consectetur eu. Nunc tristique, massa at viverra tincidunt, ante metus volutpat eros, pulvinar dictum nibh nunc in libero. Maecenas a nisl scelerisque, vestibulum diam vel, viverra ante. Quisque ultrices aliquet facilisis. Aliquam risus ex, mollis ut luctus vitae, accumsan vel felis. Donec condimentum vitae lacus non auctor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse rhoncus, lacus in sodales porttitor, justo leo luctus sapien, ut euismod turpis risus ac nibh. Aenean nec imperdiet odio. In sagittis ex sit amet dolor luctus imperdiet.
         </p><p>
@@ -53,7 +54,7 @@
         </p>
         </div>
     </main>
-
+<%- include('partials/_footer') %>
 </body>
 
 </html>
