--- a/styles/main.scss
+++ b/styles/main.scss
@@ -38,6 +38,8 @@ footer.menufooter {
 // For each item picture
 img.foodpic {
   max-width: 200px;
+  max-height:200px;
+  width: auto;
   height: auto;
   padding-right: 1em;
 }
