--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,7 +5,7 @@
   <div class="text-center" id="navmenu">
     <ul class="nav col-12 justify-content-center">
       <li><a href="/menu" class="nav-link px-2 link-light">Menu</a></li>
-      <li class="nav-link px-2 link-light">Location</li>
+      <li><a href="#top" class="nav-link px-2 link-light">Location</a></li>
       <li><a href="/contact" class="nav-link px-2 link-light">Contact</a></li>
     </ul>
   </div>
