last minute changes

--- a/views/orderconfirm.ejs
+++ b/views/orderconfirm.ejs
@@ -33,7 +33,7 @@
               <%= order_id %>
             </a>. Your Order will be ready in <a id="time-to-send-sms">
               <%= total_order_time %>
-            </a> sec.
+            </a> min.
           </p>
         </div>
       </div>
