--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>Todai - Menu</title>
 
   <link rel="stylesheet" href="../vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="../vendor/border-box.css" type="text/css" />
@@ -64,7 +64,7 @@
                 <p id="item-id-<%= idx %>" hidden>
                   <%= foodItems[idx].id%>
                 </p>
-                <button type="button" value="<%= idx %>" class="btn btn-secondary add-to-cart">Add to Cart</button>
+                <button type="button" value="<%= idx %>" class="btn btn-dark add-to-cart">Add to Cart</button>
               </div>
             </div>
           </div>
