--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center" style="background-color:black;" id="top">
+<div class="d-flex justify-content-center" style="background-color:black; padding-top:15px;" id="top">
   <a href="/"><img src="https://i.imgur.com/dMVDgqd.png" height="100px"></a>
 </div>
 <nav class="navbar navbar-expand-sm navbar-light" style="background-color:black; height:66px;">
