--- a/views/user_order.ejs
+++ b/views/user_order.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>User Orders</title>
+  <title>Todai - User Orders</title>
 
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
