add margin to header

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center" style="background-color:black;" id="top">
-  <a href="/"><img src="https://i.imgur.com/dMVDgqd.png" height="100px"></a>
+  <a href="/"><img src="https://i.imgur.com/dMVDgqd.png" height="100px" id="header-img"></a>
 </div>
 <nav class="navbar navbar-expand-sm navbar-light" style="background-color:black; height:66px;">
   <div class="text-center" id="navmenu">
